# smart-forward-android

./: BUILD-GUIDE.md  Dockerfile  GITHUB-ACTIONS-GUIDE.md  QUICK-START-ANDROID.md  QUICKSTART.md  README.md  build-android.ps1  test-build.ps1  test-github-actions.ps1
.github/workflows/: android-build.yml  quick-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/smartforward/: MainActivity.kt  MainViewModel.kt  SmartForwardNative.kt  SmartForwardTheme.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: setup-guide.md  technical-implementation.md
rust-lib/: Cargo.toml  common.rs  config.rs  config.yaml.example  forwarder.rs  main.rs  utils.rs
rust-lib/src/: common.rs  config.rs  forwarder.rs  jni_interface.rs  lib.rs  utils.rs
scripts/: build-android.sh  build-local.sh  docker-build.sh
