[package]
name = "smart-forward-lib"
version = "1.0.0"
edition = "2021"
authors = ["cls3389 <cls3389@example.com>"]
description = "智能网络转发器 Android 库 - 支持TCP、UDP、HTTP协议的高性能转发工具"
license = "MIT"
repository = "https://github.com/cls3389/smart-forward"
homepage = "https://github.com/cls3389/smart-forward"
keywords = ["proxy", "forward", "tcp", "udp", "http", "network", "android"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "smart_forward"
crate-type = ["cdylib"]

[dependencies]
# 核心依赖
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
hickory-resolver = { version = "0.24", features = ["system-config", "tokio-runtime"], default-features = false }
serde_json = "1.0"

# JNI 依赖
jni = "0.21"

# Android 特定依赖
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
# 优化设置
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# 开发模式优化
opt-level = 1
debug = true